try fix header alignment last fix didn't work

--- a/styles/style.css
+++ b/styles/style.css
@@ -18,8 +18,7 @@ header {
   background-color: #ffffff;
   color: #daf5f5;
   padding: 10px 20px 10px 20px; /* top right bottom left */
-  margin: 0 auto;
-  /*margin: 20px 400px 10px 100px;*/
+  margin: 20px 400px 10px 150px;
   border-radius: 10px;
   box-shadow: 10px 10px 10px lightgrey;
   text-align: center;
